--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -50,7 +50,7 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
  <link rel="stylesheet" href="css/global.css">
- <link rel="icon" href="https://s.tmimgcdn.com/scr/800x500/77400/jaguar-logo-template_77499-2-original.jpg" sizes="16x16 32x32" type="image/png">
+ <link rel="icon" href="img/favicon.png" sizes="16x16 32x32" type="image/png">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
  <title>Jaguar Land Rover Range Rover</title>
@@ -253,21 +253,21 @@
    <div class="gr-details">
     <h4> Range Rover Evoque</h4>
     <div class="sh-detail-primary"> The Land Rover Range Rover Evoque has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1997 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Evoque has a mileage of & Ground clearance of Range Rover Evoque is 212mm. The Range Rover Evoque is a 5 seater 4 cylinder car and has length of 4371mm, width of 2100mm and a wheelbase of 2681mm. <br> • Transmission Type: Automatic<br> • Fuel Type: Diesel<br> • Top Speed: 230 KM/H<br> • Price: 69.99 Lakh<br> </div>
-    <p class="know-more" onclick="expandedLine()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+    <p class="know-more" onclick="expanded()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
    </div>
   </div>
   <div class="gr-card"> <img class="gr-img" src="https://images.hdqwalls.com/download/2018-land-rover-range-rover-vela-qu-1280x720.jpg">
    <div class="gr-details">
     <h4> Range Rover Velar</h4>
     <div class="sh-detail-primary"> The Land Rover Range Rover Velar has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1999 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Velar has a mileage of 15.8 kmpl . The Range Rover Velar is a 5 seater 4 cylinder car and has length of 4797mm, width of 2145mm and a wheelbase of 2874mm. <br> • Transmission Type: Automatic<br> • Fuel Type: Petrol<br> • Top Speed: 217 KM/H<br> • Price: 86.75 Lakh<br> </div>
-    <p class="know-more" onclick="expandedLine()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+    <p class="know-more" onclick="expanded()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
    </div>
   </div>
   <div class="gr-card"> <img class="gr-img" src="https://static.autox.com/uploads/2020/11/2021-Land-Rover-Discovery.jpg">
    <div class="gr-details">
     <h4> Range Rover Discovery</h4>
     <div class="sh-detail-primary"> The Land Rover Discovery has 1 Diesel Engine and 3 Petrol Engine on offer. The Diesel engine is 2996 cc while the Petrol engine is 1997 cc and 2996 cc and 2995 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Discovery has a mileage of . The Discovery is a 7 seater 4 cylinder car. <br> • Transmission Type: Automatic<br> • Fuel Type: Diesel<br> • Top Speed: Undefined<br> • Price: 86.75 Lakh<br> </div>
-    <p class="know-more" onclick="expandedLine()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+    <p class="know-more" onclick="expanded()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
    </div>
   </div>
  </div> <br><br>
