--- a/user/om_73/range rover/info.html
+++ b/user/om_73/range rover/info.html
@@ -46,7 +46,7 @@
 <link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
 <link rel="stylesheet" href="css/global.css">
-<link rel="icon" href="https://s.tmimgcdn.com/scr/800x500/77400/jaguar-logo-template_77499-2-original.jpg" sizes="16x16 32x32" type="image/png">
+<link rel="icon" href="img/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Group Info</title>
@@ -141,6 +141,7 @@
             padding: 10px 40px;
             border-bottom: 4px #dadada00 solid;
             cursor: pointer;
+            font-family: 'Jost', sans-serif;
         }
         .sc-link::after{
             position: absolute;
@@ -162,9 +163,18 @@
             font-style: normal;
         }
         .prg-container{
-            display: none;
+            position: fixed;
+            bottom: -620px;
+            left: 20px;
+            display: block;
             padding: 10px 20px;
+            width: 50%;
+            background-color: rgba(255, 255, 255, 0.562);
+            backdrop-filter: blur(14px);
             border: 2px rgba(0, 0, 0, 0) solid;
+            border-radius: 6px;
+            box-shadow: 3px 3px 10px rgba(61, 61, 61, 0.233);
+            z-index: 9;
         }
         .prg-container h2{
             color: #494949;
@@ -198,6 +208,26 @@
         }
         progress::-webkit-progress-value{
             background-color: var(--richColor);
+        }
+        .jag-container{
+            border: 2px rgba(0, 0, 0, 0) solid;
+            padding: 20px;
+        }
+        .jag-container img{
+            float: right;
+            width: 13%;
+            margin: 20px;transform: rotate(3deg);
+        }
+        .jag-container h2{
+            color: var(--richColor);
+            font-family: 'Cinzel', serif;
+            letter-spacing: 2px;
+            text-shadow: 0 0 3px rgba(160, 160, 160, 0.281);
+        }
+        .jag-info{
+            line-height: 29px;
+            text-indent: 30px;
+            font-family: 'Jost', sans-serif;
         }
 @media screen and (max-width: 768px) {
     body{opacity: 1;}
@@ -331,6 +361,69 @@
         <h1>Info</h1>
     </center>
 
+    <div class="jag-container">
+        <img class="global-img" src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Jaguar_2012_logo.png/220px-Jaguar_2012_logo.png"><br>
+
+        <h2>Jaguar</h2>
+        <div class="jag-info">
+            Jaguar  is the luxury vehicle brand of Jaguar Land Rover, a British multinational car manufacturer with its headquarters in Whitley, Coventry, England.
+            Jaguar Cars was the company that was responsible for the production of Jaguar cars until its operations were fully merged with those of Land Rover to form Jaguar Land Rove r on 1 January 2013.<br><br>
+
+            Jaguar's business was founded as the Swallow Sidecar Company in 1922, originally making motorcycle sidecars before developing bodies for passenger cars.
+            Under the ownership of S. S. Cars Limited, the business extended to complete cars made in association with Standard Motor Co, many bearing Jaguar as a model name.<br><br>
+            The company's name was changed from S. S. Cars to Jaguar Cars in 1945.
+            A merger with the British Motor Corporation followed in 1966, the resulting enlarged company now being renamed as British Motor Holdings (BMH), which in 1968 merged with Leyland Motor Corporation and became British Leyland, itself to be nationalised in 1975.
+
+            Jaguar was spun off from British Leyland and was listed on the London Stock Exchange in 1984, becoming a constituent of the FTSE 100 Index until it was acquired by Ford in 1990.
+            Jaguar has, in recent years, manufactured cars for the British Prime Minister, the most recent delivery being an XJ in May 2010.
+            The company also holds royal warrants from Queen Elizabeth II and Prince Charles.<br><br>
+
+            Ford owned Jaguar Cars, also buying Land Rover in 2000, until 2008 when it sold both to Tata Motors.
+            Tata created Jaguar Land Rover as a subsidiary holding company.
+            At operating company level, in 2013 Jaguar Cars was merged with Land Rover to form Jaguar Land Rover Limited as the single design, manufacture, sales company and brand owner for both Jaguar and Land Rover vehicles.<br><br>
+
+            Since the Ford ownership era, Jaguar and Land Rover have used joint design facilities in engineering centres at Whitley in Coventry and Gaydon in Warwickshire and Jaguar cars have been assembled in plants at Castle Bromwich and Solihull.
+            On 15 February 2021 Jaguar Land Rover announced that all cars made under the Jaguar brand will be fully electric by 2025.<br><br>
+        </div>
+
+    </div>
+    <!-- <h4>Social Media Links:</h4> -->
+    <div class="sc-link"> <img class="sc-img" onclick="jagYT()" src="https://www.youtube.com/s/desktop/5aa0c1f3/img/favicon_144x144.png"> YouTube</div>
+    <div class="sc-link"> <img class="sc-img" onclick="jagInsta()" src="https://www.instagram.com/static/images/ico/favicon-192.png/68d99ba29cc8.png"> Instagram</div>
+    <div class="sc-link"> <img class="sc-img" onclick="jagWebsite()" src="https://s.tmimgcdn.com/scr/800x500/77400/jaguar-logo-template_77499-2-original.jpg"> Website</div>
+    <div class="sc-link"> <img class="sc-img" onclick="jagTwitter()" src="https://abs.twimg.com/favicons/twitter.2.ico"> Twitter</div>
+    <br><br><br>
+    <div class="jag-container">
+        <img class="global-img" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Land_Rover_logo_black.svg/2560px-Land_Rover_logo_black.svg.png"><br>
+
+        <h2>Land Rover</h2>
+        <div class="jag-info">
+            Jaguar  is the luxury vehicle brand of Jaguar Land Rover, a British multinational car manufacturer with its headquarters in Whitley, Coventry, England.
+            Jaguar Cars was the company that was responsible for the production of Jaguar cars until its operations were fully merged with those of Land Rover to form Jaguar Land Rove r on 1 January 2013.<br><br>
+
+            Jaguar's business was founded as the Swallow Sidecar Company in 1922, originally making motorcycle sidecars before developing bodies for passenger cars.
+            Under the ownership of S. S. Cars Limited, the business extended to complete cars made in association with Standard Motor Co, many bearing Jaguar as a model name.<br><br>
+            The company's name was changed from S. S. Cars to Jaguar Cars in 1945.
+            A merger with the British Motor Corporation followed in 1966, the resulting enlarged company now being renamed as British Motor Holdings (BMH), which in 1968 merged with Leyland Motor Corporation and became British Leyland, itself to be nationalised in 1975.
+
+            Jaguar was spun off from British Leyland and was listed on the London Stock Exchange in 1984, becoming a constituent of the FTSE 100 Index until it was acquired by Ford in 1990.
+            Jaguar has, in recent years, manufactured cars for the British Prime Minister, the most recent delivery being an XJ in May 2010.
+            The company also holds royal warrants from Queen Elizabeth II and Prince Charles.<br><br>
+
+            Ford owned Jaguar Cars, also buying Land Rover in 2000, until 2008 when it sold both to Tata Motors.
+            Tata created Jaguar Land Rover as a subsidiary holding company.
+            At operating company level, in 2013 Jaguar Cars was merged with Land Rover to form Jaguar Land Rover Limited as the single design, manufacture, sales company and brand owner for both Jaguar and Land Rover vehicles.<br><br>
+
+            Since the Ford ownership era, Jaguar and Land Rover have used joint design facilities in engineering centres at Whitley in Coventry and Gaydon in Warwickshire and Jaguar cars have been assembled in plants at Castle Bromwich and Solihull.
+            On 15 February 2021 Jaguar Land Rover announced that all cars made under the Jaguar brand will be fully electric by 2025.<br><br>
+        </div>
+
+    </div>
+    <!-- <h4>Social Media Links:</h4> -->
+    <div class="sc-link"> <img class="sc-img" onclick="rangeYT()" src="https://www.youtube.com/s/desktop/5aa0c1f3/img/favicon_144x144.png"> YouTube</div>
+    <div class="sc-link"> <img class="sc-img" onclick="rangeInsta()" src="https://www.instagram.com/static/images/ico/favicon-192.png/68d99ba29cc8.png"> Instagram</div>
+    <div class="sc-link"> <img class="sc-img" onclick="rangeWebsite()" src="https://s.tmimgcdn.com/scr/800x500/77400/jaguar-logo-template_77499-2-original.jpg"> Website</div>
+    <div class="sc-link"> <img class="sc-img" onclick="rangeTwitter()" src="https://abs.twimg.com/favicons/twitter.2.ico"> Twitter</div>
     <div id="stats" class="prg-container">
         <h2>Total Progress</h2>
         <h6>Last updated : 08 May 2022 at 02:33 AM</h6>
@@ -341,8 +434,8 @@
         <span class="prg-title"> Presentaion Progress: 0%</span><br>
          <progress id="report" value="0" max="100"></progress></div><br>
          <div class="prg">
-         <span class="prg-title"> Website Progress: 24%</span><br>
-          <progress id="report" value="24" max="100"></progress></div><br>
+         <span class="prg-title"> Website Progress: 25%</span><br>
+          <progress id="report" value="25" max="100"></progress></div><br>
     </div>
 
 
@@ -361,11 +454,6 @@
         <div id="grp-roll1" class="grp-info">Website by Om Lokhande</div>
         <div id="grp-brh1" class="grp-info"></div>
     </div>
-        <h4>Social Media Links:</h4>
-        <div class="sc-link"> <img class="sc-img" src="https://www.youtube.com/s/desktop/5aa0c1f3/img/favicon_144x144.png"> YouTube</div>
-        <div class="sc-link"> <img class="sc-img" src="https://www.instagram.com/static/images/ico/favicon-192.png/68d99ba29cc8.png"> Instagram</div>
-        <div class="sc-link"> <img class="sc-img" src="https://s.tmimgcdn.com/scr/800x500/77400/jaguar-logo-template_77499-2-original.jpg"> Website</div>
-        <div class="sc-link"> <img class="sc-img" src="https://abs.twimg.com/favicons/twitter.2.ico"> Twitter</div>
     </div><br><br><br><br><br>
     <center>
     <h4>Scan the QR Code below to visit our website: </h4>
@@ -380,6 +468,16 @@
     function generations(){window.location.href = "generations.html";}
     function expanded(){window.location.href = "expanded.html";}
     function jaguarInfo(){window.location.href = "https://en.wikipedia.org/wiki/Land_Rover";}
+
+    function jagYT(){window.location.href = "https://www.youtube.com/c/jaguarcars";}
+    function jagInsta(){window.location.href = "https://www.instagram.com/jaguar_india/";}
+    function jagWebsite(){window.location.href = "https://www.jaguar.in/index.html";}
+    function jagTwitter(){window.location.href = "https://twitter.com/jaguarindia";}
+
+    function rangeYT(){window.location.href = "https://www.youtube.com/user/landrover";}
+    function rangeInsta(){window.location.href = "https://www.instagram.com/landrover_in/";}
+    function rangeWebsite(){window.location.href = "https://www.landrover.in/index.html";}
+    function rangeTwitter(){window.location.href = "https://twitter.com/LandRover?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor";}
     </script>
     <script src="js/global.js"></script>
 </body>
