--- a/user/om_73/range rover/expanded.html
+++ b/user/om_73/range rover/expanded.html
@@ -46,6 +46,7 @@
 <link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
 <link rel="stylesheet" href="css/global.css">
+<link rel="icon" href="img/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Jaguar Land Rover Range Rover - Expanded Models</title>
