--- a/user/om_73/range rover/info.html
+++ b/user/om_73/range rover/info.html
@@ -315,7 +315,11 @@
         left: 0;
     }
         .prg-container{
-            display: none;
+            position: fixed;
+            bottom: -620px;
+            left: 20px;
+            display: block;
+            width: 76%;
             padding: 10px 20px;
             border: 2px rgba(0, 0, 0, 0) solid;
         }
@@ -426,16 +430,16 @@
     <div class="sc-link"> <img class="sc-img" onclick="rangeTwitter()" src="https://abs.twimg.com/favicons/twitter.2.ico"> Twitter</div>
     <div id="stats" class="prg-container">
         <h2>Total Progress</h2>
-        <h6>Last updated : 08 May 2022 at 02:33 AM</h6>
+        <h6>Last updated : 10 May 2022 at 11:30 PM</h6>
         <div class="prg">
-       <span class="prg-title"> Report Progress: 0% </span><br>
-        <progress id="report" value="0" max="100">10%</progress></div><br>
+       <span class="prg-title"> Report Progress: 7% </span><br>
+        <progress id="report" value="7" max="100">10%</progress></div><br>
         <div class="prg">
-        <span class="prg-title"> Presentaion Progress: 0%</span><br>
-         <progress id="report" value="0" max="100"></progress></div><br>
+        <span class="prg-title"> Presentaion Progress: 4%</span><br>
+         <progress id="report" value="4" max="100"></progress></div><br>
          <div class="prg">
-         <span class="prg-title"> Website Progress: 25%</span><br>
-          <progress id="report" value="25" max="100"></progress></div><br>
+         <span class="prg-title"> Website Progress: 34%</span><br>
+          <progress id="report" value="34" max="100"></progress></div><br>
     </div>
 
 
@@ -449,8 +453,8 @@
 
         <div id="grp-nme1" class="grp-info">Group members : Om, Akash, Prashant & Ruchika</div>
         <div id="grp-nme1" class="grp-info">Roll No. : 73, 74, 75, 76</div>
-        <div id="grp-nme1" class="grp-info">Report by (Unknown)</div>
-        <div id="grp-mem1" class="grp-info">Presentaion by (Unknown)</div>
+        <div id="grp-nme1" class="grp-info">Report by Om Lokhande</div>
+        <div id="grp-mem1" class="grp-info">Presentaion by Akash Mhais</div>
         <div id="grp-roll1" class="grp-info">Website by Om Lokhande</div>
         <div id="grp-brh1" class="grp-info"></div>
     </div>
